--- a/Lemonade.csproj
+++ b/Lemonade.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="Day.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="IceCubes.cs" />
+    <Compile Include="IceCube.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Lemon.cs" />
@@ -58,7 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Store.cs" />
-    <Compile Include="SugarCubes.cs" />
+    <Compile Include="SugarCube.cs" />
     <Compile Include="Wallet.cs" />
     <Compile Include="Weather.cs" />
   </ItemGroup>
